clusters/production/firecrawl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: firecrawl
spec:
  selector:
    app: api
  type: NodePort
  ports:
    - name: http
      port: 3002
      targetPort: 3002
      nodePort: 30302
